--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -4,7 +4,7 @@ found in element-ui/packages/theme-chalk/src/common/var.scss.
 For example, to overwrite the theme color:
 */
 //$--color-primary: #2F54EB;
-$--color-primary: #0099FF;
+$--color-primary: teal;
 $--color-warning: #D48806;
 $--color-success: #67C23A;
 $--color-danger: #F56C6C;
