--- a/src/style/defaults.scss
+++ b/src/style/defaults.scss
@@ -276,12 +276,29 @@ $font-size-values: (10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 
 }
 
 
+.float-right {
+  float: right;
+}
+
+
+.float-left {
+  float: left;
+}
+
+
+.float-none {
+  float: none;
+}
+
+
 // ~ width
 // ===============================================================================
 
-$width-values: (10, 20, 24, 30, 36, 40, 50,
-60, 70, 80, 90, 100, 120, 140, 160,
-180, 200, 220, 240, 260, 280, 300, 350, 400, 500, 720, 810, 900, 980);
+$width-values: (
+  10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 48, 50,
+  52, 54, 60, 64, 70, 72, 80, 81, 84, 90, 92, 96, 100, 120, 125, 130, 140, 150,
+  160, 180, 200, 220, 240, 260, 280, 300, 320, 340, 350, 360, 380, 400, 420, 450, 480, 500,
+  540, 550, 600, 640, 650, 720, 750, 810, 840, 850, 900, 950, 980, 1000);
 
 @each $value in $width-values {
   .width-#{$value} {
