--- a/src/style/defaults.scss
+++ b/src/style/defaults.scss
@@ -192,6 +192,16 @@ $flex-values: (1, 2, 3, 4, 5, 6, 7, 8, 9);
 }
 
 
+.display-none {
+  display: none;
+}
+
+
+.keep-display-none {
+  display: none !important;
+}
+
+
 /* align */
 
 .align-center {
